# Lab_2_Salt_and_pepper

CudaMedianFilter/: CMakeLists.txt  test
